# ChangeLog for dev-python/python-twitter
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/python-twitter/ChangeLog,v 1.5 2009/12/09 18:50:22 nixnut Exp $

  09 Dec 2009; nixnut <nixnut@gentoo.org> python-twitter-0.6.ebuild:
  ppc stable #295223

  02 Dec 2009; Markus Meier <maekke@gentoo.org> python-twitter-0.6.ebuild:
  amd64/x86 stable, bug #295223

  23 Nov 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  python-twitter-0.6.ebuild:
  Set SUPPORT_PYTHON_ABIS. Add src_test(). Add "examples" USE flag.

  30 Oct 2009; Mounir Lamouri <volkmar@gentoo.org>
  python-twitter-0.6.ebuild:
  Keywording for ppc.

*python-twitter-0.6 (23 Oct 2009)

  23 Oct 2009; Dirkjan Ochtman <djc@gentoo.org> +python-twitter-0.6.ebuild,
  +metadata.xml:
  Moved from sunrise to the Portage tree, added simplejson dependency.

  14 Oct 2009; Tomas Touceda (chiiph) <chiiph@gmail.org> +Manifest:
  dev-python/python-twitter: Fix missing Manifest

  13 Oct 2009; Markos Chandras <hwoarang@gentoo.org>
  python-twitter-0.6.ebuild:
  Remove useless whitespace

  13 Oct 2009; Markos Chandras <hwoarang@gentoo.org>
  python-twitter-0.6.ebuild:
  Use python_get_sitedir function

  05 Oct 2009; Tomas Touceda (chiiph) <chiiph@gmail.org>
  +python-twitter-0.6.ebuild, +metadata.xml:
  New Ebuild for bug 287529. Thanks sunrise devs for their reviews
