@@ -1,4 +1,4 @@
-DIST python-twitter-0.6.tar.gz 81863 RMD160 1d813877cac653be4463f82b25eb7d95b8877e80 SHA1 44e226ba59e32a15ce2f2ae6d38bc62a85d19e05 SHA256 cc805d4d088a7818c6a3484c8d542cde8addaa418c1714ff64c4406651d73410
-EBUILD python-twitter-0.6.ebuild 1098 RMD160 2af6de5715600a189f1907c125b1d46ce4d5958f SHA1 99518eb753e25fcec3e49db4ae0ff20db6fc75bb SHA256 3b59c758d4962c5354cf6b4f05196b91810e4b19c5434f0ae8a0d8f556321446
-MISC ChangeLog 1413 RMD160 e0d994aaf7f793eebc1c82beaa62cae5e9037873 SHA1 7c7b97d90a503a2fd5940d9d4fa54c0aeed0cde2 SHA256 2e7b7f79bba755552666967796d168c7415a57476062b32701227dab232063ba
+DIST python-twitter-0.8.1.tar.gz 67265 RMD160 f2516e8861641d76e01bbf9126259c61d28178eb SHA1 b9b85da21d60a2528966d076de8b330665072126 SHA256 cf793bdfe5d028f7646f80190a491f150574159ab3a968364b1e18e6e2d38b27
+EBUILD python-twitter-0.8.1.ebuild 1134 RMD160 dbb3bb653565cc9b777431e4f1663b5860fbdfb1 SHA1 bfaf520915e8b2dcf062215aec942ab2bfc38846 SHA256 96616b5176553a51655a87b1cbd397bdc5b0c3d517e6df536bd6ce6fb4ac939b
+MISC ChangeLog 1810 RMD160 81d70b339c2106a374f613391ada19ff2aa60263 SHA1 180ff5f9d96e4c2d9cea5a46f543a2d75774e7a8 SHA256 a8ccb042f6d2211cf4f15009d742e6a3213d80c6d86ea00818515b5f55dbb78b
 MISC metadata.xml 259 RMD160 4b781a038008fac445e4154045f964b64ad59e75 SHA1 9809d89f3360f9f7537c2bb480d6bcbe942c6ea0 SHA256 0fb1da675767b69b5bd240d135effe2fc500e8b997a5f4eed212e5b26d027972
