@@ -1,6 +1,6 @@
-# Copyright 1999-2009 Gentoo Foundation
+# Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/python-twitter/python-twitter-0.6.ebuild,v 1.6 2009/12/09 18:50:22 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/python-twitter/python-twitter-0.8.1.ebuild,v 1.1 2011/04/30 15:47:35 maksbotan Exp $
 
 EAPI="2"
 SUPPORT_PYTHON_ABIS="1"
@@ -13,10 +13,11 @@ SRC_URI="http://python-twitter.googlecode.com/files/${P}.tar.gz"
 
 LICENSE="Apache-2.0"
 SLOT="0"
-KEYWORDS="amd64 ppc x86"
+KEYWORDS="~amd64 ~x86"
 IUSE="examples"
 
-RDEPEND="dev-python/simplejson"
+RDEPEND="dev-python/oauth2
+         dev-python/simplejson"
 DEPEND="${RDEPEND}
 	dev-python/setuptools"
 RESTRICT_PYTHON_ABIS="3.*"
@@ -31,12 +32,12 @@ src_prepare() {
 	rm -fr simplejson
 }
 
-src_test() {
-	testing() {
-		PYTHONPATH="build-${PYTHON_ABI}/lib" "$(PYTHON)" twitter_test.py
-	}
-	python_execute_function testing
-}
+#src_test() {
+#	testing() {
+#		PYTHONPATH="build-${PYTHON_ABI}/lib" "$(PYTHON)" twitter_test.py
+#	}
+#	python_execute_function testing
+#}
 
 src_install() {
 	distutils_src_install
